--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Movie App</string>
+    <string name="app_name">PHE PHIM</string>
     <string name="nav_home">Home</string>
     <string name="nav_favorite">Favorite</string>
     <string name="nav_account">Account</string>
